--- a/satapi.gateway.main/packages.config
+++ b/satapi.gateway.main/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Dapper" version="1.42" targetFramework="net461" />
   <package id="Dapper-Async" version="1.03" targetFramework="net461" />
+  <package id="kafka-net" version="0.9.0.65" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
